Commit before change to assigned_value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 2.8)
 
 project(supercell)
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -10,3 +11,4 @@ find_package(Boost 1.49)
 
 add_subdirectory(libs)
 add_subdirectory(src)
+add_subdirectory(doc)
