Revert "Beta version commit. v0.1"
This reverts commit bbfad013d7b7ba5d2ad6ee4dc235231e0ec8f6bb.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 #set common includes
 set(sc_includes ${sc_includes} ${CMAKE_CURRENT_SOURCE_DIR}/core)
 
+ExternalProject_Get_Property(combinatorics SOURCE_DIR)
+set(sc_includes ${sc_includes} ${SOURCE_DIR})
+unset(SOURCE_DIR)
+
 set(sc_includes ${sc_includes} /usr/local/include/openbabel-2.0/)
 set(sc_includes ${sc_includes} ${CMAKE_SOURCE_DIR}/libs/utils/)
 
