Compiling issues: Release by default, Boost 1.46 REQUIRED.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,13 @@ cmake_minimum_required (VERSION 2.8)
 project(supercell)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wno-sign-compare " )
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wno-sign-compare -Wextra " )
 
-set(CMAKE_BUILD_TYPE Debug)
+if(CMAKE_BUILD_TYPE STREQUAL "")
+  set(CMAKE_BUILD_TYPE Release)
+endif(CMAKE_BUILD_TYPE STREQUAL "")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
-find_package(Boost 1.49)
 
 add_subdirectory(libs)
 add_subdirectory(src)
