--- a/src/sc_cli/CMakeLists.txt
+++ b/src/sc_cli/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Boost 1.49 COMPONENTS regex program_options filesystem system)
+find_package(Boost 1.46 REQUIRED COMPONENTS regex program_options filesystem system)
 
 set(sc_cli_source ${sc_sources} main.cpp parse_d2o_input.cpp)
 set(sc_cli_libraries ${sc_libraries} ${Boost_LIBRARIES})
