Changed license text in manual.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ tmp/
 # Backup files
 *.backup
 *.*~
+
+#doc compiled files
+doc/supercell_man.aux
+doc/supercell_man.log
+doc/supercell_man.out
+doc/supercell_man.pdf
