"get minimal distance" now in common_utils.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,8 @@ file(GLOB core_sources ${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp)
 set(sc_sources ${WRAP_MEMCPY_SRC} ${sc_sources} ${core_sources})
 
 set(sc_sources ${sc_sources} ${CMAKE_SOURCE_DIR}/libs/common_utils/others/string_utils.cpp
-                             ${CMAKE_SOURCE_DIR}/libs/common_utils/others/rnd_utils.cpp)
+                             ${CMAKE_SOURCE_DIR}/libs/common_utils/others/rnd_utils.cpp
+                             ${CMAKE_SOURCE_DIR}/libs/common_utils/obabel/obabel_utils.cpp)
 
 #set_common_libraries
 add_library(openbabel UNKNOWN IMPORTED)
