--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,17 @@ set(sc_includes ${sc_includes} ${CMAKE_CURRENT_SOURCE_DIR}/core)
 set(sc_includes ${sc_includes} /usr/local/include/openbabel-2.0/)
 set(sc_includes ${sc_includes} ${CMAKE_SOURCE_DIR}/libs/common_utils/)
 
+find_package(Eigen3 REQUIRED)
+set(sc_includes ${sc_includes} ${EIGEN3_INCLUDE_DIR})
+
 #set common sources
 file(GLOB core_sources ${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp)
 set(sc_sources ${WRAP_MEMCPY_SRC} ${sc_sources} ${core_sources})
 
 set(sc_sources ${sc_sources} ${CMAKE_SOURCE_DIR}/libs/common_utils/others/string_utils.cpp
                              ${CMAKE_SOURCE_DIR}/libs/common_utils/others/rnd_utils.cpp
-                             ${CMAKE_SOURCE_DIR}/libs/common_utils/obabel/obabel_utils.cpp)
+                             ${CMAKE_SOURCE_DIR}/libs/common_utils/obabel/obabel_utils.cpp
+                             ${CMAKE_SOURCE_DIR}/libs/common_utils/cryst_tools/cryst_tools.cpp)
 
 #set_common_libraries
 add_library(openbabel UNKNOWN IMPORTED)
