--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
  - sudo apt-get update -qq
 
 install:
- - sudo apt-get install -qq  libeigen3-dev
+ - sudo apt-get install -qq  libeigen3-dev libboost-program-options-dev libboost-regex-dev 
 
 before_script:
  - mkdir build
