--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ install:
  - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python
  - git clone https://github.com/openbabel/openbabel.git
  - cd openbabel && mkdir build && cd build
- - cmake ../ && make && sudo make install
+ - cmake ../ -DBUILD_GUI=OFF && make && sudo make install
+ - sudo rm -rf /usr/local/lib/openbabel/*/mmcifformat.so
  - hg clone https://bitbucket.org/eigen/eigen
  - cd eigen && mkdir build && cd build
  - cmake ../ && make && sudo make install
