--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,23 @@ compiler:
 
 before_install:
  - sudo apt-get update -qq
+ - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python 
+ - export c_path=${PWD}
 
 install:
- - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python
+ - cd ~ 
  - git clone https://github.com/openbabel/openbabel.git
  - cd openbabel && mkdir build && cd build
- - cmake ../ -DBUILD_GUI=OFF && make && sudo make install
+ - cmake ../ DBUILD_GUI=OFF -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Debug -DWITH_INCHI=OFF && make && sudo make install
  - sudo rm -rf /usr/local/lib/openbabel/*/mmcifformat.so
+ - cd ~
  - hg clone https://bitbucket.org/eigen/eigen
  - cd eigen && mkdir build && cd build
  - cmake ../ && sudo make install
+ - cd ~
 
 before_script:
+ - cd ${c_path}
  - mkdir build
  - cd build
  - cmake ..
