--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,21 @@ set(sc_includes ${sc_includes} ${CMAKE_SOURCE_DIR}/libs/common_utils/)
 find_package(Eigen3 REQUIRED)
 set(sc_includes ${sc_includes} ${EIGEN3_INCLUDE_DIR})
 
+find_package(LibArchive)
+if( ${LibArchive_FOUND} )
+  set(sc_includes ${sc_includes} ${LibArchive_INCLUDE_DIRS})
+  add_definitions(-DLIBARCHIVE_ENABLED)
+  set(CMAKE_REQUIRED_INCLUDES ${LibArchive_INCLUDE_DIRS})
+  set(CMAKE_REQUIRED_LIBRARIES ${LibArchive_LIBRARIES})
+  include(CheckFunctionExists) 
+  CHECK_FUNCTION_EXISTS(archive_write_set_format_filter_by_ext LibArchive_format_filter_by_ext)
+  if( ${LibArchive_format_filter_by_ext} )
+    add_definitions( -DLIBARCHIVE_PATCH_DISABLE )
+  endif() 
+else()
+  message(WARNING "libarchive is not found. Packed output will be disabled.")
+endif()
+
 #set common sources
 file(GLOB core_sources ${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp)
 set(sc_sources ${WRAP_MEMCPY_SRC} ${sc_sources} ${core_sources})
