--- a/src/sc_cli/CMakeLists.txt
+++ b/src/sc_cli/CMakeLists.txt
@@ -3,7 +3,7 @@ set(Boost_USE_STATIC_LIBS ${LINK_STATIC_LIBS})
 find_package(Boost 1.46 REQUIRED COMPONENTS regex program_options filesystem system random)
 
 set(sc_cli_source ${sc_sources} main.cpp parse_d2o_input.cpp)
-set(sc_cli_libraries ${sc_libraries} ${Boost_LIBRARIES})
+set(sc_cli_libraries ${sc_libraries} ${Boost_LIBRARIES} ${LibArchive_LIBRARIES} )
 
 include_directories(${sc_includes})
 
