--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python 
+ - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev
  - export c_path=${PWD}
 
 install:
@@ -15,10 +15,6 @@ install:
  - cd openbabel && mkdir build && cd build
  - cmake ../ -DBUILD_GUI=OFF -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS_DEBUG="-O0" -DWITH_INCHI=OFF && make && sudo make install
  - sudo rm -rf /usr/local/lib/openbabel/*/mmcifformat.so
- - cd ~
- - hg clone https://bitbucket.org/eigen/eigen
- - cd eigen && mkdir build && cd build
- - cmake ../ && sudo make install
  - cd ~
 
 before_script:
