--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ compiler:
  - gcc
  - clang
 
+env:
+ - LIBARCHIVE_OFF=TRUE
+ - LIBARCHIVE_OFF=FALSE 
+
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev
+ - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev libarchive-dev
  - export c_path=${PWD}
 
 install:
@@ -21,7 +25,7 @@ before_script:
  - cd ${c_path}
  - mkdir build
  - cd build
- - cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON
+ - cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=${LIBARCHIVE_OFF}
 
 script:
  - make supercell
