--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ obsolete/
 doc/supercell_man.aux
 doc/supercell_man.log
 doc/supercell_man.out
+
+#examples output
+data/examples/alpha-SiGeO2/cell112
+data/examples/beta-Li3PS4/Li3PS4_Li2_?
+data/examples/Cu2ZnSnSxSe4-x/cell111
+data/examples/PbSnTe/out
