Minor changes in examples.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ data/examples/alpha-SiGeO2/cell112
 data/examples/beta-Li3PS4/Li3PS4_Li2_?
 data/examples/Cu2ZnSnSxSe4-x/cell111
 data/examples/PbSnTe/out
+data/examples/FeSbO4/out
