--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,14 @@ if( ${LibArchive_FOUND} )
   set(sc_includes ${sc_includes} ${LibArchive_INCLUDE_DIRS})
   add_definitions(-DLIBARCHIVE_ENABLED)
   set(CMAKE_REQUIRED_INCLUDES ${LibArchive_INCLUDE_DIRS})
-  set(CMAKE_REQUIRED_LIBRARIES ${LibArchive_LIBRARIES})
+  if(LINK_STATIC_LIBS)
+    find_package(BZip2 REQUIRED)
+    find_package(LibLZMA REQUIRED)
+    set(CMAKE_REQUIRED_LIBRARIES ${LibArchive_LIBRARIES} ${LIBLZMA_LIBRARIES} ${BZIP2_LIBRARIES})
+    set(LibArchive_LIBRARIES ${LibArchive_LIBRARIES} ${LIBLZMA_LIBRARIES} ${BZIP2_LIBRARIES})
+  else()
+    set(CMAKE_REQUIRED_LIBRARIES ${LibArchive_LIBRARIES})
+  endif()
   include(CheckFunctionExists) 
   CHECK_FUNCTION_EXISTS(archive_write_set_format_filter_by_ext LibArchive_format_filter_by_ext)
   if( ${LibArchive_format_filter_by_ext} )
