--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ cache: ccache
 
 matrix:
  include:
+   - dist: precise
+     compiler: gcc
+     env: LIBARCHIVE_OFF=FALSE
+
    - compiler: gcc
      env: LIBARCHIVE_OFF=FALSE
 
@@ -17,12 +21,12 @@ matrix:
      env: LIBARCHIVE_OFF=FALSE
 
    - compiler: gcc
-     env: LIBARCHIVE_OFF=TRUE
+     env: LIBARCHIVE_OFF=FALSE
           DEPLOY_BUILD=TRUE
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev libarchive-dev texlive-extra-utils liblzma-dev libbz2-dev zlib1g-dev
+ - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev libarchive-dev texlive-extra-utils liblzma-dev libbz2-dev zlib1g-dev texlive-latex-extra
  - export c_path=${PWD}
 
 install:
@@ -40,6 +44,6 @@ before_script:
  - cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=${LIBARCHIVE_OFF} `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DCMAKE_BUILD_TYPE=Release -DGLIBC_24_COMPATIBLE=ON -DLINK_STATIC_LIBS=ON" || echo "-DCMAKE_BUILD_TYPE=Debug"`
 
 script:
- - make supercell
+ - make `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "supercell doc_man doc_pdf" || echo "supercell"`
  - ./src/sc_cli/supercell -d -i ../data/examples/Ca2Al2SiO7/Ca2Al2SiO7.cif 
- - echo "Make docs..."; [[ ${DEPLOY_BUILD} == TRUE ]] && make doc_man doc_pdf || exit 0
+ 
