Tutorial in distribution.

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_script:
  - cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=${LIBARCHIVE_OFF} `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DCMAKE_BUILD_TYPE=Release -DGLIBC_24_COMPATIBLE=ON -DLINK_STATIC_LIBS=ON" || echo "-DCMAKE_BUILD_TYPE=Debug"`
 
 script:
- - make `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "supercell doc_man doc_pdf doc_html" || echo "supercell"`
+ - make `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "supercell doc_man doc_pdf doc_html tutorial_pdf" || echo "supercell"`
  - ./src/sc_cli/supercell -d -i ../data/examples/Ca2Al2SiO7/Ca2Al2SiO7.cif
 
 deploy:
