--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
 before_install:
  - wget https://github.com/orex/supercell/raw/deploy/deploy.sh && chmod +x deploy.sh
  - sudo apt-get update -qq
- - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev libarchive-dev texlive-extra-utils liblzma-dev libbz2-dev zlib1g-dev texlive-latex-extra
+ - sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev openbabel texlive-extra-utils python libeigen3-dev libarchive-dev texlive-extra-utils liblzma-dev libbz2-dev zlib1g-dev texlive-latex-extra python-pygments
  - export c_path=${PWD}
 
 install:
