--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,10 @@ matrix:
      
 before_install:
  - wget https://github.com/orex/supercell/raw/deploy/deploy.sh && chmod +x deploy.sh
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-     sudo apt-get update -qq
-     sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev libeigen3-dev libarchive-dev liblzma-dev libbz2-dev zlib1g-dev 
-     if [[ ${DEPLOY_BUILD} == TRUE ]]; then sudo apt-get install -qq texlive-extra-utils python texlive-extra-utils texlive-latex-extra python-pygments texlive-science texlive-humanities texlive-pstricks texlive-fonts-recommended; fi
-   fi
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-     brew update
-     brew install eigen boost 
-   fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev libeigen3-dev libarchive-dev liblzma-dev libbz2-dev zlib1g-dev; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen boost; fi
+ - if [[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq texlive-extra-utils python texlive-extra-utils texlive-latex-extra python-pygments texlive-science texlive-humanities texlive-pstricks texlive-fonts-recommended; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen boost; fi
  - export c_path=${PWD}
 
 install:
