--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev libeigen3-dev libarchive-dev liblzma-dev libbz2-dev zlib1g-dev; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen boost; fi
  - if [[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq texlive-extra-utils python texlive-extra-utils texlive-latex-extra python-pygments texlive-science texlive-humanities texlive-pstricks texlive-fonts-recommended; fi
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen boost; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen; fi
  - export c_path=${PWD}
 
 install:
@@ -50,6 +50,7 @@ before_script:
  - cd build
  - cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=${LIBARCHIVE_OFF} `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DCMAKE_BUILD_TYPE=Release -DGLIBC_24_COMPATIBLE=ON -DLINK_STATIC_LIBS=ON" || echo "-DCMAKE_BUILD_TYPE=Debug"`
  - wget https://github.com/gpoore/minted/raw/master/source/minted.sty -O doc/tutorial/minted.sty
+ - wget https://raw.githubusercontent.com/gpoore/fvextra/master/fvextra/fvextra.sty -O doc/tutorial/fvextra.sty
 
 script:
  - make `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "supercell doc_man doc_pdf doc_html tutorial_pdf" || echo "supercell"`
