--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
  - cd ~ 
  - git clone https://github.com/openbabel/openbabel.git
  - cd openbabel && mkdir build && cd build
- - cmake ../ -DCMAKE_BUILD_TYPE=Release `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DGLIBC_24_COMPATIBLE=ON -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"`
+ - cmake ../ -DCMAKE_BUILD_TYPE=Release `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"` `[[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]] && echo " -DGLIBC_24_COMPATIBLE=ON"`
  - make && sudo make install
  - cd ~
 
