--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,11 @@ doc/*/*.log
 doc/*/*.out
 
 #examples output
+data/examples/*/out
+
 data/examples/alpha-SiGeO2/cell112
 data/examples/beta-Li3PS4/Li3PS4_Li2_?
 data/examples/Cu2ZnSnSxSe4-x/cell111
-data/examples/PbSnTe/out
-data/examples/FeSbO4/out
 
 data/examples/PbSnTe-SQS/SQS-1x1x2
 data/examples/PbSnTe-SQS/SQS-1x2x2
@@ -44,8 +44,6 @@ data/examples/ice-Ih/ice-Ih-cfgs.anlz
 data/examples/ice-Ih/ice-Ih-cfgs/
 
 data/examples/gamma-Fe2O3/cell1?3_out/
-
-data/examples/PZT/out
 
 #GULP
 gulp
