--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,13 @@ matrix:
           
    - os: osx
      osx_image: xcode6.4
+     cache: ccache     
      compiler: gcc
      env: LIBARCHIVE_OFF=FALSE
 
    - os: osx
      osx_image: xcode6.4
+     cache: ccache     
      compiler: gcc
      rvm: 1.27.0
      env: LIBARCHIVE_OFF=FALSE
