--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ set(sc_includes ${sc_includes} ${CMAKE_CURRENT_SOURCE_DIR}/core)
 
 find_package(OpenBabel2 REQUIRED 2.4.1)
 
-if(NOT EXISTS ${OpenBabel2_INCLUDE_DIRS}/include/openbabel/elements.h)
+if(NOT EXISTS ${OpenBabel2_INCLUDE_DIRS}/openbabel/elements.h)
   add_definitions(-DOLD_OB_PERIODIC_TABLE)
 endif()
 
