--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,17 @@ language: cpp
 group: travis_latest
 
 matrix:
-   - os: windows
-     env: LIBARCHIVE_OFF=FALSE
-          DEPLOY_BUILD=TRUE
-          OB_241_STABLE=FALSE
-
+  include:
+     - os: windows
+       env: LIBARCHIVE_OFF=FALSE
+            DEPLOY_BUILD=TRUE
+            OB_241_STABLE=FALSE
+     - os: linux
+       dist: xenial
+       env: LIBARCHIVE_OFF=FALSE
+            DEPLOY_BUILD=TRUE
+            OB_241_STABLE=FALSE
+            
 before_install:
  - wget https://github.com/orex/supercell/raw/deploy/deploy.sh && chmod +x deploy.sh
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev libeigen3-dev libarchive-dev liblzma-dev libbz2-dev zlib1g-dev; fi
