--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ install:
  - if [[ ${OB_241_STABLE} == TRUE ]]; then git pull && git checkout openbabel-2-4-x; fi
  - mkdir build && cd build
  - cmake ../ -G "Visual Studio 14 2015 Win64" -DCMAKE_BUILD_TYPE=Release -DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF
+ - cat CMakeCache.txt | grep CMAKE_GENERATOR
+ - ls
  - cmake --build . --target install
  - cd ~
 
