--- a/.travis.yml
+++ b/.travis.yml
@@ -4,29 +4,55 @@ env:
 
 language: cpp
 
+sudo: required
+
 group: travis_latest
 
 matrix:
-  include:
-     - os: windows
-       env: LIBARCHIVE_OFF=FALSE
-            DEPLOY_BUILD=TRUE
-            OB_241_STABLE=FALSE
-     - os: linux
-       dist: xenial
-       cache: ccache
-       env: LIBARCHIVE_OFF=FALSE
-            DEPLOY_BUILD=TRUE
-            OB_241_STABLE=FALSE
-            
+ include:
+   - compiler: gcc
+     dist: trusty
+     cache: ccache
+     env: LIBARCHIVE_OFF=FALSE
+          OB_241_STABLE=TRUE
+
+   - compiler: gcc
+     dist: trusty
+     cache: ccache
+     env: LIBARCHIVE_OFF=FALSE
+          OB_241_STABLE=FALSE
+
+   - compiler: gcc
+     dist: trusty
+     cache: ccache
+     env: LIBARCHIVE_OFF=TRUE
+          OB_241_STABLE=FALSE
+
+   - compiler: clang
+     dist: trusty
+     env: LIBARCHIVE_OFF=FALSE
+          OB_241_STABLE=FALSE
+
+   - compiler: gcc
+     dist: trusty
+     cache: ccache
+     env: LIBARCHIVE_OFF=FALSE
+          DEPLOY_BUILD=TRUE
+          OB_241_STABLE=FALSE
+
+   - os: osx
+     cache: ccache     
+     compiler: gcc
+     env: LIBARCHIVE_OFF=FALSE
+          DEPLOY_BUILD=TRUE
+          OB_241_STABLE=FALSE
+
 before_install:
  - wget https://github.com/orex/supercell/raw/deploy/deploy.sh && chmod +x deploy.sh
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev libeigen3-dev libarchive-dev liblzma-dev libbz2-dev zlib1g-dev; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen libarchive; fi
  - if [[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq texlive-extra-utils python texlive-extra-utils texlive-latex-extra python-pygments texlive-science texlive-humanities texlive-pstricks texlive-fonts-recommended; fi
  - if [[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "osx" ]]; then echo "OSX deploy build"; fi
- - choco feature enable -n=allowGlobalConfirmation
- - choco install jom
  - export c_path=${PWD}
 
 install:
@@ -35,10 +61,8 @@ install:
  - cd openbabel
  - if [[ ${OB_241_STABLE} == TRUE ]]; then git pull && git checkout openbabel-2-4-x; fi
  - mkdir build && cd build
- - cmake ../ -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF
- - cat CMakeCache.txt | grep CMAKE_GENERATOR
- - ls
- - cmake --build .
+ - cmake ../ -DCMAKE_BUILD_TYPE=Release `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"` `[[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]] && echo " -DGLIBC_24_COMPATIBLE=ON"`
+ - make && sudo make install
  - cd ~
 
 before_script:
@@ -52,3 +76,11 @@ before_script:
 script:
  - make `[[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]] && echo "supercell doc_man doc_pdf doc_html tutorial_pdf" || echo "supercell"`
  - ./src/sc_cli/supercell -d -i ../data/examples/Ca2Al2SiO7/Ca2Al2SiO7.cif
+
+deploy:
+  provider: script
+  script: ${c_path}/deploy.sh
+  skip_cleanup: true
+  on:
+    branch: master
+    condition: $DEPLOY_BUILD = TRUE
