Update for several include dirs in OpenBabel

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,12 @@ set(sc_includes ${sc_includes} ${CMAKE_CURRENT_SOURCE_DIR}/core)
 
 find_package(OpenBabel2 REQUIRED 2.4.1)
 
-if(NOT EXISTS ${OpenBabel2_INCLUDE_DIRS}/openbabel/elements.h)
-  add_definitions(-DOLD_OB_PERIODIC_TABLE)
-endif()
-
+add_definitions(-DOLD_OB_PERIODIC_TABLE)
+foreach(OB_ID ${OpenBabel2_INCLUDE_DIRS})
+  if(EXISTS ${OB_ID}/openbabel/elements.h)
+    remove_definitions(-DOLD_OB_PERIODIC_TABLE)
+  endif()
+endforeach()
 
 set(sc_includes ${sc_includes} ${OpenBabel2_INCLUDE_DIRS})
 set(sc_includes ${sc_includes} ${CMAKE_SOURCE_DIR}/libs/common_utils/)
