--- a/.travis.yml
+++ b/.travis.yml
@@ -1,86 +1,199 @@
 env:
   global:
     - COMMIT_AUTHOR_EMAIL: orex@travis-ci.org
-
-language: cpp
+    - TEST_PROGRAM_CMD="-d -i ../data/examples/Ca2Al2SiO7/Ca2Al2SiO7.cif | grep -q "The total number of combinations is 6"
 
 sudo: required
 
 group: travis_latest
 
-matrix:
+dist: xenial
+language: cpp
+cache: ccache
+
+jobs:
  include:
-   - compiler: gcc
-     dist: trusty
-     cache: ccache
-     env: LIBARCHIVE_OFF=FALSE
+   - name: "Developing build."
+     env: BUILD_TYPE=PROGRAM
+          OB_241_STABLE=FALSE
+          DEPLOY_BUILD=FALSE
+
+   - name: "Developing build against stable OpenBabel version."
+     env: BUILD_TYPE=PROGRAM
           OB_241_STABLE=TRUE
+          DEPLOY_BUILD=FALSE
 
-   - compiler: gcc
+   - name: "Developing build for old trusty platform."
      dist: trusty
-     cache: ccache
-     env: LIBARCHIVE_OFF=FALSE
+     env: BUILD_TYPE=PROGRAM
           OB_241_STABLE=FALSE
+          DEPLOY_BUILD=FALSE
 
-   - compiler: gcc
-     dist: trusty
-     cache: ccache
-     env: LIBARCHIVE_OFF=TRUE
+   - name: "Developing build without LibArchive support."
+     env: BUILD_TYPE=PROGRAM
           OB_241_STABLE=FALSE
+          DEPLOY_BUILD=FALSE
+          SUPERCELL_CMAKE_OPTIONS="-DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=TRUE"
 
-   - compiler: clang
-     dist: trusty
-     env: LIBARCHIVE_OFF=FALSE
+   - name: "Developing build with clang."
+     compiler: clang
+     dist: trusty #xenial build fails with clang
+     cache: false
+     env: BUILD_TYPE=PROGRAM
           OB_241_STABLE=FALSE
+          DEPLOY_BUILD=FALSE
 
-   - compiler: gcc
-     dist: trusty
-     cache: ccache
-     env: LIBARCHIVE_OFF=FALSE
-          DEPLOY_BUILD=TRUE
-          OB_241_STABLE=FALSE
-
-   - os: osx
-     cache: ccache     
+   - name: "Deploy build Linux."
      compiler: gcc
-     env: LIBARCHIVE_OFF=FALSE
-          DEPLOY_BUILD=TRUE
+     env: BUILD_TYPE=PROGRAM
+          LIBARCHIVE_OFF=FALSE
+          DEPLOY_BUILD="linux"
           OB_241_STABLE=FALSE
+          OB_CMAKE_OPTIONS="-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF -DGLIBC_24_COMPATIBLE=ON"
+          SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON -DGLIBC_24_COMPATIBLE=ON"
+
+   - name: "Deploy build MacOS."
+     os: osx
+     env: BUILD_TYPE=PROGRAM
+          DEPLOY_BUILD="osx"
+          OB_241_STABLE=FALSE
+          OB_CMAKE_OPTIONS="-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"
+          SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON"
+
+   - name: "Deploy build Windows crosscompile."
+     cache: false
+     services:
+       - docker
+     env: DOCKER_NAME="dockcross/windows-x64"
+          BUILD_TYPE=CROSS
+          DEPLOY_BUILD="windows"
+          OB_241_STABLE=FALSE
+          OB_CMAKE_OPTIONS="-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"
+          SUPERCELL_CMAKE_OPTIONS="-DLINK_STATIC_LIBS=ON -DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=TRUE"
+     addons:
+       apt:
+         update: true
+         packages:
+           - docker-ce
+           - wine
+
+   - name: "Deploy build documentation."
+     env: BUILD_TYPE=DOC
+          DEPLOY_BUILD="doc"
+     cache: false
+     addons:
+       apt:
+         update: true
+         packages:
+         - lmodern
+         - texlive-extra-utils
+         - python
+         - texlive-extra-utils
+         - texlive-latex-extra
+         - python-pygments
+         - texlive-science
+         - texlive-humanities
+         - texlive-pstricks
+         - texlive-fonts-recommended
+
+
+addons:
+  apt:
+    update: true
+    packages:
+    - libboost-program-options-dev
+    - libboost-regex-dev
+    - libboost-filesystem-dev
+    - libboost-random-dev
+    - libboost-system-dev
+    - libeigen3-dev
+    - libarchive-dev
+    - liblzma-dev
+    - libbz2-dev
+    - zlib1g-dev
+    - zip
+
+  homebrew:
+    update: true
+    packages:
+    - boost
+    - eigen
+    - libarchive
+
 
 before_install:
- - wget https://github.com/orex/supercell/raw/deploy/deploy.sh && chmod +x deploy.sh
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; sudo apt-get install -qq libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev libboost-random-dev libboost-system-dev libeigen3-dev libarchive-dev liblzma-dev libbz2-dev zlib1g-dev; fi
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install eigen libarchive; fi
- - if [[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq texlive-extra-utils python texlive-extra-utils texlive-latex-extra python-pygments texlive-science texlive-humanities texlive-pstricks texlive-fonts-recommended; fi
- - if [[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "osx" ]]; then echo "OSX deploy build"; fi
  - export c_path=${PWD}
 
 install:
- - cd ~ 
- - git clone https://github.com/openbabel/openbabel.git
- - cd openbabel
- - if [[ ${OB_241_STABLE} == TRUE ]]; then git pull && git checkout openbabel-2-4-x; fi
- - mkdir build && cd build
- - cmake ../ -DCMAKE_BUILD_TYPE=Release `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DMINIMAL_BUILD=OFF -DBUILD_GUI=OFF -DBUILD_SHARED=OFF -DWITH_INCHI=OFF -DENABLE_VERSIONED_FORMATS=OFF -DENABLE_TESTS=OFF"` `[[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]] && echo " -DGLIBC_24_COMPATIBLE=ON"`
- - make && sudo make install
- - cd ~
-
-before_script:
+ - |
+   if [[ ${BUILD_TYPE} == CROSS ]]; then
+     docker pull ${DOCKER_NAME}
+     docker run --rm ${DOCKER_NAME} > ./dockcross
+     chmod +x ./dockcross
+   fi
+ - |
+   if [[ ${BUILD_TYPE} == PROGRAM ]] || [[ ${BUILD_TYPE} == CROSS ]]; then
+      mkdir -p tmp && cd tmp && git clone https://github.com/openbabel/openbabel.git && cd openbabel
+      if [[ ${OB_241_STABLE} == TRUE ]]; then git pull && git checkout openbabel-2-4-x; fi
+      mkdir build
+   fi
+ - |
+   if [[ ${BUILD_TYPE} == CROSS ]]; then
+      echo "PATCH OPENBABEL"
+      sed -ir 's/#define isfinite _finite//g' src/config.h.cmake
+   fi
+ - |
+   if [[ ${BUILD_TYPE} == DOC ]]; then
+      echo "Doc prepare."
+   fi
  - cd ${c_path}
- - mkdir build
- - cd build
- - cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_DISABLE_FIND_PACKAGE_LibArchive=${LIBARCHIVE_OFF} `[[ ${DEPLOY_BUILD} == TRUE ]] && echo "-DCMAKE_BUILD_TYPE=Release -DLINK_STATIC_LIBS=ON" || echo "-DCMAKE_BUILD_TYPE=Debug"`  `[[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]] && echo " -DGLIBC_24_COMPATIBLE=ON"`
- - wget https://github.com/gpoore/minted/raw/master/source/minted.sty -O doc/tutorial/minted.sty
- - wget https://raw.githubusercontent.com/gpoore/fvextra/master/fvextra/fvextra.sty -O doc/tutorial/fvextra.sty
+
 
 script:
- - make `[[ ${DEPLOY_BUILD} == TRUE && "$TRAVIS_OS_NAME" == "linux" ]] && echo "supercell doc_man doc_pdf doc_html tutorial_pdf" || echo "supercell"`
- - ./src/sc_cli/supercell -d -i ../data/examples/Ca2Al2SiO7/Ca2Al2SiO7.cif
+ - |
+   if [[ ${BUILD_TYPE} == PROGRAM ]]; then
+      cd tmp/openbabel/build
+      cmake ../ -DCMAKE_BUILD_TYPE=Release `echo ${OB_CMAKE_OPTIONS}`
+      make -j 2 && sudo make install
+      mkdir ${c_path}/build && cd ${c_path}/build
+      cmake ../ -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_BUILD_TYPE=Release -DBUILD_DOC=OFF `echo ${SUPERCELL_CMAKE_OPTIONS}`
+      make -j 2 supercell
+   fi
+ - |
+   if [[ ${BUILD_TYPE} == CROSS ]]; then
+      mkdir ${c_path}/build
+      ./dockcross bash -c "cd /usr/src/mxe && sudo make -j2 boost eigen && \
+                           cd /work/tmp/openbabel/build/ && \
+                           cmake ../ -DCMAKE_BUILD_TYPE=Release `echo ${OB_CMAKE_OPTIONS}` && make -j2 && \
+                           cd /work/build/ && \
+                           cmake ../ -DCMAKE_BUILD_TYPE=Release -DOpenBabel2_DIR=/work/tmp/openbabel/build `echo ${SUPERCELL_CMAKE_OPTIONS}` \
+                           && make -j2 supercell"
+   fi
+ - |
+   if [[ ${BUILD_TYPE} == DOC ]]; then
+      mkdir ${c_path}/build && cd ${c_path}/build
+      cmake ../ -DBUILD_PROGRAM=OFF -DBUILD_DOC=ON
+      make -j 2
+   fi
+ - cd ${c_path}/build
+ - if [[ ${BUILD_TYPE} == PROGRAM ]]; then ./src/sc_cli/supercell `echo ${TEST_PROGRAM_CMD}`; fi
+ - |
+   if [[ ${BUILD_TYPE} == CROSS ]]; then
+      cp -a ../tmp/openbabel/data/{space-groups,bondtyp}.txt .
+      wine ./src/sc_cli/supercell.exe `echo ${TEST_PROGRAM_CMD}`
+   fi
+ - |
+   if [[ ${BUILD_TYPE} == DOC ]]; then
+      ls doc/man/supercell_man.{html,pdf} doc/man/supercell.1 doc/tutorial/supercell_tutorial.pdf
+   fi
+
+before_deploy:
+  - wget https://github.com/orex/supercell/raw/deploy/deploy.sh -O ${c_path}/deploy.sh && chmod +x ${c_path}/deploy.sh
 
 deploy:
   provider: script
   script: ${c_path}/deploy.sh
   skip_cleanup: true
   on:
-    branch: master
-    condition: $DEPLOY_BUILD = TRUE
+    all_branches: true
+    condition: ${DEPLOY_BUILD} != FALSE && ${DEPLOY_BUILD} != ""
